--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,3 +1,8 @@
 :root {
     --border-radius: 0.25em;
+
+    --space-xs: 0.25em;
+    --space-s : 0.5em;
+    --space-m : 0.75em;
+    --space-l : 1em
 }
