--- a/sass/components/alert.scss
+++ b/sass/components/alert.scss
@@ -5,7 +5,7 @@
     border-radius   : var(--border-radius);
     display         : flex;
     gap             : 1em;
-    padding         : 1em;
+    padding         : var(--space-l);
 
     --focus-color: currentColor;
     --hover-color: var(--silver-100);
