--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -4,5 +4,8 @@
     --space-xs: 0.25em;
     --space-s : 0.5em;
     --space-m : 0.75em;
-    --space-l : 1em
+    --space-l : 1em;
+
+    --elevate-dropdown: 800;
+    --elevate-navbar  : 900;
 }
