--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -28,15 +28,18 @@
     --silver-100            : #fafafa;
     --silver-300            : #d4d4d4;
     --silver-500            : #abacae;
+    --silver-100-transparent: rgb(250, 250, 250, 0.25);
     --silver-500-transparent: rgb(171, 172, 174, 0.25);
 
-    --black-500: #333333;
-    --black-700: #1a1a1a;
-    --black-900: #000000;
+    --black-500            : #333333;
+    --black-700            : #1a1a1a;
+    --black-900            : #000000;
+    --black-500-transparent: rgb(51, 51, 51, 0.25);
 
     --bg-100: var(--silver-100);
     --bg-300: var(--silver-300);
-    --bg-500: var(--silver-300);
+    --bg-500: var(--silver-500);
+    --bg-t  : var(--silver-500-transparent);
 
     --fg-100: var(--black-500);
     --fg-300: var(--black-700);
@@ -76,6 +79,7 @@
         --bg-100: var(--black-500);
         --bg-300: var(--black-700);
         --bg-500: var(--black-900);
+        --bg-t  : var(--black-500-transparent);
 
         --fg-100: var(--silver-500);
         --fg-300: var(--silver-300);
