--- a/sass/components/code-snippet.scss
+++ b/sass/components/code-snippet.scss
@@ -1,7 +1,8 @@
 .code-snippet {
-    background-color: var(--bg-300);
+    background-color: #0002;
     border-radius   : var(--border-radius);
     font-size       : 1rem;
+    overflow        : auto;
     padding         : var(--space-l);
     padding-top     : calc(var(--space-l) * 3);
     position        : relative;
@@ -21,6 +22,11 @@
     position        : absolute;
     text-transform  : uppercase;
     top             : 0;
+}
+
+.rainbow {
+    border-radius   : 0;
+    background-color: transparent;
 }
 
 @media (prefers-color-scheme: dark) {
