--- a/sass/utility.scss
+++ b/sass/utility.scss
@@ -18,3 +18,20 @@
 .section+.section {
     margin-top: 1em;
 }
+
+.page {
+    width : 75%;
+    margin: auto;
+}
+
+.visually-hidden {
+    border     : 0;
+    clip       : rect(0 0 0 0);
+    height     : auto;
+    margin     : 0;
+    overflow   : hidden;
+    padding    : 0;
+    position   : absolute;
+    white-space: nowrap;
+    width      : 1px;
+}
