✨ Added shadow variables

--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -8,4 +8,8 @@
 
     --elevate-dropdown: 800;
     --elevate-navbar  : 900;
+    
+    --shadow-1        : 0 2px 7px #0003;
+    --shadow-2        : 0 4px 10px #0004;
+    --shadow-3        : 0 6px 15px #0005;
 }
