--- a/sass/utility.scss
+++ b/sass/utility.scss
@@ -35,3 +35,16 @@
     white-space: nowrap;
     width      : 1px;
 }
+
+/* ASPECT RATIOS */
+.square {
+    aspect-ratio: 1;
+}
+
+.landscape {
+    aspect-ratio: 16/9;
+}
+
+.portrait {
+    aspect-ratio: 9/16
+}
