--- a/sass/index.scss
+++ b/sass/index.scss
@@ -10,6 +10,11 @@ body {
     margin          : 0;
 }
 
+img {
+    height    : 100%;
+    object-fit: cover;
+    width     : 100%;
+}
 
 @import "colors.scss";
 @import "variables.scss";
