--- a/sass/index.scss
+++ b/sass/index.scss
@@ -16,6 +16,30 @@ img {
     width     : 100%;
 }
 
+h1 {
+    font-size: 2rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+}
+
+h3 {
+    font-size: 1.17rem;
+}
+
+h4 {
+    font-size: 1.00rem;
+}
+
+h5 {
+    font-size: 0.83rem;
+}
+
+h6 {
+    font-size: 0.67rem;
+}
+
 @import "colors.scss";
 @import "variables.scss";
 @import "layout.scss";
