--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -74,6 +74,10 @@
     --success-t  : rgb(104, 183, 35, 0.25);
 }
 
+body {
+    background-color: var(--background, var(--bg-100));
+}
+
 @media (prefers-color-scheme: dark) {
     :root {
         --bg-100: var(--black-500);
@@ -84,5 +88,9 @@
         --fg-100: var(--silver-500);
         --fg-300: var(--silver-300);
         --fg-500: var(--silver-100);
+    }
+
+    body {
+        --background: var(--bg-300);
     }
 }
