--- a/sass/components/code-snippet.scss
+++ b/sass/components/code-snippet.scss
@@ -1,5 +1,5 @@
 .code-snippet {
-    background-color: #0002;
+    background-color: #0001;
     border-radius   : var(--border-radius);
     font-size       : 1rem;
     overflow        : auto;
@@ -24,7 +24,7 @@
     top             : 0;
 }
 
-.rainbow {
+.code-snippet code {
     border-radius   : 0;
     background-color: transparent;
 }
