--- a/sass/index.scss
+++ b/sass/index.scss
@@ -151,6 +151,11 @@ nav li:before {
 @import "components/breadcrumb.scss";
 @import "components/button.scss";
 @import "components/byline.scss";
+@import "components/card.scss";
 @import "components/code-snippet.scss";
 @import "components/disclosure.scss";
+@import "components/dropdown.scss";
+@import "components/figure.scss";
+@import "components/nav-item.scss";
+@import "components/navbar.scss";
 @import "components/pagination.scss";
