--- a/sass/index.scss
+++ b/sass/index.scss
@@ -138,10 +138,21 @@ nav li:before {
     position: absolute;
 }
 
+::selection {
+    background-color: var(--brand-100);
+    color           : var(--brand-900);
+}
+
+@media (prefers-color-scheme: dark) {
+    ::selection {
+        background-color: var(--brand-900);
+        color           : var(--brand-100);
+    }
+}
+
 @import "colors.scss";
 @import "variables.scss";
 @import "layout.scss";
-@import "utility.scss";
 @import "syntax-highlighting.scss";
 @import "typography.scss";
 
@@ -149,6 +160,7 @@ nav li:before {
 @import "components/alert.scss";
 @import "components/badge.scss";
 @import "components/breadcrumb.scss";
+@import "components/button-group.scss";
 @import "components/button.scss";
 @import "components/byline.scss";
 @import "components/card.scss";
@@ -156,6 +168,11 @@ nav li:before {
 @import "components/disclosure.scss";
 @import "components/dropdown.scss";
 @import "components/figure.scss";
+@import "components/list-group.scss";
 @import "components/nav-item.scss";
 @import "components/navbar.scss";
 @import "components/pagination.scss";
+@import "components/table.scss";
+
+/* OVERRIDING UTILITIES */
+@import "utility.scss";
