💄 Changed badge font weight

--- a/sass/components/badge.scss
+++ b/sass/components/badge.scss
@@ -2,7 +2,7 @@
     background-color: var(--bg-color);
     border-radius   : var(--border-radius);
     color           : var(--text-color);
-    font-weight     : bold;
+    font-weight     : 600;
     padding         : var(--space-xs) var(--space-s);
     text-decoration : none;
     transition      : background-color 300ms, box-shadow 300ms;
