🐛 Fixed bug in disclosure widgets
Nested disclosure widgets follow the caret rotation of their parent
disclosure widget when parent is opened even when the nested widget is closed.

--- a/sass/components/disclosure.scss
+++ b/sass/components/disclosure.scss
@@ -31,7 +31,7 @@ details summary::after {
 	transform: rotate(45deg) translateY(-0.25em);
 }
 
-details[open] summary::after {
+details[open] > summary::after {
 	transform: rotate(-135deg) translateY(0.25em);
 }
 
