--- a/sass/components/alert.scss
+++ b/sass/components/alert.scss
@@ -106,3 +106,8 @@
     background-color: transparent;
     box-shadow      : 0 0 0 5px var(--focus-color);
 }
+
+.alert .feather {
+    height    : 1em;
+    width     : auto;
+}
