--- a/sass/typography.scss
+++ b/sass/typography.scss
@@ -4,7 +4,7 @@
     --monospace : "Monacode", monospace;
 
     /* ALIASES */
-    --font-mono: var(--monospace);
+    --font-mono     : var(--monospace);
     --font-monospace: var(--monospace);
 }
 
@@ -39,7 +39,7 @@ cite {
 }
 
 a {
-    color: var(--accent-700);
+    color          : var(--accent-700);
     text-decoration: none;
 }
 
@@ -49,7 +49,7 @@ a {
     }
 }
 
-a:hover {
+a:not([class]):hover {
     text-decoration: 1px underline;
 }
 
@@ -63,4 +63,54 @@ pre {
 
 h1 {
     font-size: clamp(2.5em, 10vw, 3.5em);
+}
+
+/* DEFINITION LISTS */
+
+dl {
+    margin: auto;
+}
+
+dl dt {
+    font-family: var(--font-sans);
+    font-weight: 800;
+}
+
+dl dd+dt {
+    margin-top: 2em;
+}
+
+dl dd {
+    margin: 0;
+}
+
+dl dd::before {
+    content: '\2014\20';
+}
+
+@media (min-width: 85ch) {
+    dl {
+        display              : grid;
+        gap                  : 1em;
+        grid-template-columns: auto 2fr;
+        place-items          : stretch;
+    }
+
+    dl dt {
+        grid-column: 1;
+        display    : flex;
+        font-weight: 600;
+    }
+
+    dl dd+dt {
+        margin: 0;
+    }
+
+    dl dd {
+        grid-column: 2;
+    }
+
+    dl dd::before {
+        content: none;
+    }
 }
