--- a/sass/index.scss
+++ b/sass/index.scss
@@ -150,10 +150,10 @@ nav li:before {
     }
 }
 
-@import "colors.scss";
 @import "variables.scss";
 @import "layout.scss";
 @import "syntax-highlighting.scss";
+@import "colors.scss";
 @import "typography.scss";
 
 /* COMPONENTS */
@@ -169,6 +169,7 @@ nav li:before {
 @import "components/dropdown.scss";
 @import "components/figure.scss";
 @import "components/list-group.scss";
+@import "components/menu.scss";
 @import "components/nav-item.scss";
 @import "components/navbar.scss";
 @import "components/pagination.scss";
